
 ** pdf: updated wrapper for all available *pdf distribution functions

 ** random: updated wrapper for all available *rnd distribution functions

 ** regression_ttest: new functionality

 ** std: fixed MATLAB compatibility

 ** var: fixed MATLAB compatibility

 Removed Functions:
 ==================

 ** cor_test (replaced by correlation_test)

 ** prop_test_2 (replaced by ztest2)




 Summary of important user-visible changes for statistics 1.5.5:
-------------------------------------------------------------------

 Important Notice: 1) `mad`, `mean`, `median`, `std`, `var` functions
                       shadow core Octave's respective functions
                   2) incompatibility with the `nan` package
 New functions:
 ==============

 ** betafit (fully Matlab compatible)

 ** betalike (fully Matlab compatible)

 ** binofit (fully Matlab compatible)

 ** binolike (similar functionality to MATLAB's likefunc)

 ** einstein (plotting function for the einstein tile)

 ** isoutlier (fully Matlab compatible)

 ** logicdf (replacing logistic_cdf)

 ** logiinv (replacing logistic_inv)

 ** logipdf (replacing logistic_pdf)

 ** logirnd (replacing logistic_rnd)

 ** loglcdf

 ** loglinv

 ** loglpdf

 ** loglrnd

 ** lognfit (fully Matlab compatible)

 ** mad (fully Matlab compatible)

 ** normfit (fully Matlab compatible)

 ** poissfit (fully Matlab compatible, extra functionality)

 ** poisslike (similar functionality to MATLAB's likefunc)

 ** wblfit (fully Matlab compatible)

 ** wbllike (fully Matlab compatible)

 Improvements:
 =============

 ** runstest: fixed MATLAB compatibility

 ** mcnemar_test: updated functionality

 ** tabulate: fixed MATLAB compatibility

 ** trimmean: fixed MATLAB compatibility

 Removed Functions:
 ==================

 ** logistic_cdf (replacing logicdf)

 ** logistic_inv (replacing logiinv)

 ** logistic_pdf (replacing logipdf)

 ** logistic_rnd (replacing logirnd)

 ** run_test (replaced by runstest)
